# chip_sim_ap

./: .gitignore  CMakeLists.txt  README.md
src/: app.c  app.h  app_state.h  camera.c  camera.h  chip.c  chip.h  chip_action.h  constants.h  ctx.h  event.c  event.h  input.c  input.h  main.c  render.c  render.h  runtime.c  simulate.c  simulate.h  textures.c  textures.h  ui.c  ui.h  unit.c  unit.h
src/core/: camera.c  camera.h  event.c  input.c  input.h  window.c  window.h
src/editor/: editor.c  editor.h  editor_ui.c  render.c  render.h
src/simulation/: chip.c  chip.h  circuit.c  circuit.h  connection.c  connection.h  ctx.c  ctx.h  simulate.c  simulate.h
src/ui/: ui.c  ui.h
